logs/apb.log
Listing '.'...
Listing './README'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/apb'...
Listing './lib/python3.5/site-packages/apb/dat'...
Listing './lib/python3.5/site-packages/apb/dat/playbooks'...
Listing './lib/python3.5/site-packages/apb/dat/roles'...
Listing './lib/python3.5/site-packages/apb/dat/roles/bind'...
Listing './lib/python3.5/site-packages/apb/dat/roles/bind/tasks'...
Listing './lib/python3.5/site-packages/apb/dat/roles/deprovision'...
Listing './lib/python3.5/site-packages/apb/dat/roles/deprovision/tasks'...
Listing './lib/python3.5/site-packages/apb/dat/roles/provision'...
Listing './lib/python3.5/site-packages/apb/dat/roles/provision/tasks'...
Listing './lib/python3.5/site-packages/apb/dat/roles/unbind'...
Listing './lib/python3.5/site-packages/apb/dat/roles/unbind/tasks'...
Listing './lib/python3.5/site-packages/apb-1.0.4.egg-info'...
Listing './lib/python3.5/site-packages/cachetools'...
Listing './lib/python3.5/site-packages/cachetools-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/dictdiffer'...
Listing './lib/python3.5/site-packages/dictdiffer-0.7.0.dist-info'...
Listing './lib/python3.5/site-packages/docker'...
Listing './lib/python3.5/site-packages/docker/api'...
Listing './lib/python3.5/site-packages/docker/models'...
Listing './lib/python3.5/site-packages/docker/transport'...
Listing './lib/python3.5/site-packages/docker/types'...
Listing './lib/python3.5/site-packages/docker/utils'...
Listing './lib/python3.5/site-packages/docker-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/docker_pycreds-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/dockerpycreds'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/auth'...
Listing './lib/python3.5/site-packages/google/auth/compute_engine'...
Listing './lib/python3.5/site-packages/google/auth/crypt'...
Listing './lib/python3.5/site-packages/google/auth/transport'...
Listing './lib/python3.5/site-packages/google/oauth2'...
Listing './lib/python3.5/site-packages/google_auth-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/ipaddress-1.0.19.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/kubernetes'...
Listing './lib/python3.5/site-packages/kubernetes/client'...
Listing './lib/python3.5/site-packages/kubernetes/client/apis'...
Listing './lib/python3.5/site-packages/kubernetes/client/models'...
Listing './lib/python3.5/site-packages/kubernetes/config'...
Listing './lib/python3.5/site-packages/kubernetes/watch'...
Listing './lib/python3.5/site-packages/kubernetes-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/openshift'...
Listing './lib/python3.5/site-packages/openshift/ansiblegen'...
Listing './lib/python3.5/site-packages/openshift/client'...
Listing './lib/python3.5/site-packages/openshift/client/apis'...
Listing './lib/python3.5/site-packages/openshift/client/models'...
Listing './lib/python3.5/site-packages/openshift/config'...
Listing './lib/python3.5/site-packages/openshift/helper'...
Listing './lib/python3.5/site-packages/openshift/test'...
Listing './lib/python3.5/site-packages/openshift-0.3.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1_modules'...
Listing './lib/python3.5/site-packages/pyasn1_modules-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_string_utils-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/rsa'...
Listing './lib/python3.5/site-packages/rsa-3.4.2.dist-info'...
Listing './lib/python3.5/site-packages/ruamel'...
Listing './lib/python3.5/site-packages/ruamel/yaml'...
Listing './lib/python3.5/site-packages/ruamel.yaml-0.15.35.dist-info'...
Listing './lib/python3.5/site-packages/scripts'...
Listing './lib/python3.5/site-packages/scripts/from_gen'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.40.0.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './requirements.txt'...
Listing './share'...
Listing './share/python-wheels'...
